Added Jellyfin and improved documentation

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,8 @@
+# If you're not sure what timezone you should fill in, you can look at the following list:
+# https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+# Use the column that says "TZ database name".
 TIMEZONE=Europe/Amsterdam
+# The PleX claim token is used to connect your server to your account. It can be obtained at
+# https://www.plex.tv/claim/ and is valid for 4 minutes after generating the token.
 PLEX_CLAIM=
 ROOT_DIR=/
