--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,27 @@ services:
     network_mode: host
     environment:
       - PUID=1000
-      - PGID=1000
+      - PGID=${MEDIACENTER_GID}
       - VERSION=docker
       - PLEX_CLAIM=${PLEX_CLAIM}
     volumes:
       - ${ROOT_DIR}/docker/plex-config:/config
-      - ${ROOT_DIR}/data/media/tv:/tv
-      - ${ROOT_DIR}/data/media/movies:/movies
-      - ${ROOT_DIR}/data/media/music:/music
+      - ${ROOT_DIR}/data/media:/media
+    restart: unless-stopped
+
+  jellyfin:
+    image: lscr.io/linuxserver/jellyfin:latest
+    container_name: jellyfin
+    environment:
+      - PUID=1000
+      - PGID=${MEDIACENTER_GID}
+      - UMASK=002
+      - TZ=Europe/Amsterdam
+    volumes:
+      - ${ROOT_DIR}/docker/jellyfin-config:/config
+      - ${ROOT_DIR}/data/media:/data
+    ports:
+      - 8096:8096
     restart: unless-stopped
 
 #
