--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: plex
     network_mode: host
     environment:
-      - PUID=1000
-      - PGID=${MEDIACENTER_GID}
+      - PUID=${UID}
+      - PGID=13000
       - VERSION=docker
       - PLEX_CLAIM=${PLEX_CLAIM}
     volumes:
@@ -21,8 +21,8 @@ services:
     depends_on:
       - plex
     environment:
-      - PUID=1000
-      - PGID=${MEDIACENTER_GID}
+      - PUID=${UID}
+      - PGID=13000
       - TZ=${TIMEZONE}
     volumes:
       - ${ROOT_DIR}/docker/tautulli-config:/config
@@ -34,8 +34,8 @@ services:
     image: lscr.io/linuxserver/jellyfin:latest
     container_name: jellyfin
     environment:
-      - PUID=1000
-      - PGID=${MEDIACENTER_GID}
+      - PUID=${UID}
+      - PGID=13000
       - UMASK=002
       - TZ=${TIMEZONE}
     volumes:
@@ -52,8 +52,8 @@ services:
     image: lscr.io/linuxserver/radarr:latest
     container_name: radarr
     environment:
-      - PUID=${RADARR_UID}
-      - PGID=${MEDIACENTER_GID}
+      - PUID=13002
+      - PGID=13000
       - UMASK=002
       - TZ=${TIMEZONE}
     volumes:
@@ -67,8 +67,8 @@ services:
     image: lscr.io/linuxserver/sonarr:latest
     container_name: sonarr
     environment:
-      - PUID=${SONARR_UID}
-      - PGID=${MEDIACENTER_GID}
+      - PUID=13001
+      - PGID=13000
       - UMASK=002
       - TZ=${TIMEZONE}
     volumes:
@@ -82,8 +82,8 @@ services:
     image: lscr.io/linuxserver/lidarr:latest
     container_name: lidarr
     environment:
-      - PUID=${LIDARR_UID}
-      - PGID=${MEDIACENTER_GID}
+      - PUID=13003
+      - PGID=13000
       - UMASK=002
       - TZ=${TIMEZONE}
     volumes:
@@ -97,8 +97,8 @@ services:
     image: lscr.io/linuxserver/readarr:develop
     container_name: readarr
     environment:
-      - PUID=${READARR_UID}
-      - PGID=${MEDIACENTER_GID}
+      - PUID=13004
+      - PGID=13000
       - UMASK=002
       - TZ=${TIMEZONE}
     volumes:
@@ -112,8 +112,8 @@ services:
     image: lscr.io/linuxserver/mylar3:latest
     container_name: mylar3
     environment:
-      - PUID=${MYLAR_UID}
-      - PGID=${MEDIACENTER_GID}
+      - PUID=13005
+      - PGID=13000
       - UMASK=002
     volumes:
       - ${ROOT_DIR}/docker/mylar-config:/config
@@ -126,8 +126,8 @@ services:
     image: lscr.io/linuxserver/prowlarr:develop
     container_name: prowlarr
     environment:
-      - PUID=${PROWLARR_UID}
-      - PGID=${MEDIACENTER_GID}
+      - PUID=13006
+      - PGID=13000
       - UMASK=002
       - TZ=${TIMEZONE}
     volumes:
@@ -140,8 +140,8 @@ services:
     image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
     environment:
-      - PUID=${QBIT_UID}
-      - PGID=${MEDIACENTER_GID}
+      - PUID=13007
+      - PGID=13000
       - UMASK=002
       - TZ=${TIMEZONE}
       - WEBUI_PORT=8080
