Added support for Jackett.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,6 +136,20 @@ services:
       - 9696:9696
     restart: unless-stopped
 
+  jackett:
+    image: lscr.io/linuxserver/jackett:latest
+    container_name: jackett
+    environment:
+      - PUID=13006
+      - PGID=13000
+      - UMASK=002
+      - TZ=${TIMEZONE}
+    volumes:
+      - ${ROOT_DIR}/docker/jackett-config:/config
+    ports:
+      - 9117:9117
+    restart: unless-stopped
+
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
