--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,68 +1,6 @@
 ---
 version: "3.1"
 services:
-  plex:
-    image: lscr.io/linuxserver/plex:latest
-    container_name: plex
-    network_mode: host
-    environment:
-      - PUID=${UID}
-      - PGID=13000
-      - VERSION=docker
-      - PLEX_CLAIM=${PLEX_CLAIM}
-    volumes:
-      - ${ROOT_DIR}/docker/plex-config:/config
-      - ${ROOT_DIR}/data/media:/data/media
-    restart: unless-stopped
-
-  tautulli:
-    image: lscr.io/linuxserver/tautulli:latest
-    container_name: tautulli
-    depends_on:
-      - plex
-    environment:
-      - PUID=${UID}
-      - PGID=13000
-      - TZ=${TIMEZONE}
-    volumes:
-      - ${ROOT_DIR}/docker/tautulli-config:/config
-    ports:
-      - 8181:8181
-    restart: unless-stopped
-
-  jellyfin:
-    image: lscr.io/linuxserver/jellyfin:latest
-    container_name: jellyfin
-    environment:
-      - PUID=${UID}
-      - PGID=13000
-      - UMASK=002
-      - TZ=${TIMEZONE}
-    volumes:
-      - ${ROOT_DIR}/docker/jellyfin-config:/config
-      - ${ROOT_DIR}/data/media:/data/media
-    ports:
-      - 8096:8096
-    restart: unless-stopped
-
-#
-# SERVARR
-#
-  radarr:
-    image: lscr.io/linuxserver/radarr:latest
-    container_name: radarr
-    environment:
-      - PUID=13002
-      - PGID=13000
-      - UMASK=002
-      - TZ=${TIMEZONE}
-    volumes:
-      - ${ROOT_DIR}/docker/radarr-config:/config
-      - ${ROOT_DIR}/data:/data
-    ports:
-      - 7878:7878
-    restart: unless-stopped
-
   sonarr:
     image: lscr.io/linuxserver/sonarr:latest
     container_name: sonarr
@@ -70,56 +8,27 @@ services:
       - PUID=13001
       - PGID=13000
       - UMASK=002
-      - TZ=${TIMEZONE}
+      - TZ=Europe/Amsterdam
     volumes:
-      - ${ROOT_DIR}/docker/sonarr-config:/config
-      - ${ROOT_DIR}/data:/data
+      - /home/luctia/detering/config/sonarr-config:/config
+      - /home/luctia/detering/data:/data
     ports:
-      - 8989:8989
+      - "8989:8989"
     restart: unless-stopped
 
-  lidarr:
-    image: lscr.io/linuxserver/lidarr:latest
-    container_name: lidarr
+  radarr:
+    image: lscr.io/linuxserver/radarr:latest
+    container_name: radarr
     environment:
-      - PUID=13003
+      - PUID=13002
       - PGID=13000
       - UMASK=002
-      - TZ=${TIMEZONE}
+      - TZ=Europe/Amsterdam
     volumes:
-      - ${ROOT_DIR}/docker/lidarr-config:/config
-      - ${ROOT_DIR}/data:/data
+      - /home/luctia/detering/config/radarr-config:/config
+      - /home/luctia/detering/data:/data
     ports:
-      - 8686:8686
-    restart: unless-stopped
-
-  readarr:
-    image: lscr.io/linuxserver/readarr:develop
-    container_name: readarr
-    environment:
-      - PUID=13004
-      - PGID=13000
-      - UMASK=002
-      - TZ=${TIMEZONE}
-    volumes:
-      - ${ROOT_DIR}/docker/readarr-config:/config
-      - ${ROOT_DIR}/data:/data
-    ports:
-      - 8787:8787
-    restart: unless-stopped
-
-  mylar3:
-    image: lscr.io/linuxserver/mylar3:latest
-    container_name: mylar3
-    environment:
-      - PUID=13005
-      - PGID=13000
-      - UMASK=002
-    volumes:
-      - ${ROOT_DIR}/docker/mylar-config:/config
-      - ${ROOT_DIR}/data:/data
-    ports:
-      - 8090:8090
+      - "7878:7878"
     restart: unless-stopped
 
   prowlarr:
@@ -129,11 +38,26 @@ services:
       - PUID=13006
       - PGID=13000
       - UMASK=002
-      - TZ=${TIMEZONE}
+      - TZ=Europe/Amsterdam
     volumes:
-      - ${ROOT_DIR}/docker/prowlarr-config:/config
+      - /home/luctia/detering/config/prowlarr-config:/config
     ports:
-      - 9696:9696
+      - "9696:9696"
+    restart: unless-stopped
+
+  jellyfin:
+    image: lscr.io/linuxserver/jellyfin:latest
+    container_name: jellyfin
+    environment:
+      - PUID=${UID}
+      - PGID=13000
+      - UMASK=002
+      - TZ=Europe/Amsterdam
+    volumes:
+      - /home/luctia/detering/config/jellyfin-config:/config
+      - /home/luctia/detering/data/media:/data
+    ports:
+      - "8096:8096"
     restart: unless-stopped
 
   qbittorrent:
@@ -143,13 +67,14 @@ services:
       - PUID=13007
       - PGID=13000
       - UMASK=002
-      - TZ=${TIMEZONE}
+      - TZ=Europe/Amsterdam
       - WEBUI_PORT=8080
     volumes:
-      - ${ROOT_DIR}/docker/qbittorrent-config:/config
-      - ${ROOT_DIR}/data/torrents:/data/torrents
+      - /home/luctia/detering/config/qbittorrent-config:/config
+      - /home/luctia/detering/data/torrents:/data/torrents
     ports:
-      - 8080:8080
-      - 6881:6881
-      - 6881:6881/udp
+      - "8080:8080"
+      - "6881:6881"
+      - "6881:6881/udp"
     restart: unless-stopped
+
