--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
     container_name: plex
     network_mode: host
     environment:
-      - PUID=${UID}
+      - PUID=13010
       - PGID=13000
       - VERSION=docker
       - PLEX_CLAIM=
