docker-compose sample that uses env variables
new .env sample, fixed setup

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,34 @@
 # If you're not sure what timezone you should fill in, you can look at the following list:
 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 # Use the column that says "TZ database name".
+# to find your system's preconfigured timezone run: cat /etc/timezone
 TIMEZONE=Europe/Amsterdam
+
 # The PleX claim token is used to connect your server to your account. It can be obtained at
 # https://www.plex.tv/claim/ and is valid for 4 minutes after generating the token.
 PLEX_CLAIM=
-ROOT_DIR=/
+
+# Choose your root directory for keeping all your container configs and data.
+ROOT_DIR=/ezarr
+
+# USER IDs for each container that requires their own user. The default values will most likely suffice, but in case one of these IDs is already in use on your system it will have to be changed. Any value should work as long as there aren't conflicts with other users.
+# If you've already set up the containers and want to change user IDs after the fact, you have to remove the old users first and re-set permissions. First run remove_old_users.sh and then the steps for manual installation.
+# If you're doing a manual installation make sure to first change the IDs in this file, and then run setup.sh to set up the directory structure and permissions before you start the docker containers.
+MEDIACENTER_GID=13000
+SONARR_UID=13001
+RADARR_UID=13002
+LIDARR_UID=13003
+READARR_UID=13004
+MYLAR_UID=13005
+AUDIOBOOKSHELF_UID=13014
+BAZARR_UID=13013
+PROWLARR_UID=13006
+QBITTORRENT_UID=13007
+JACKETT_UID=13008
+PLEX_UID=13010
+OVERSEERR_UID=13009
+SABNZBD_UID=13011
+JELLYSEERR_UID=13012
+
+# The user used to run docker-compose. To find this run: id -u
+UID=1000 
