change default install directory to current dir

--- a/.env.sample
+++ b/.env.sample
@@ -9,7 +9,7 @@ TIMEZONE=Europe/Amsterdam
 PLEX_CLAIM=
 
 # Choose your root directory for keeping all your container configs and data.
-ROOT_DIR=/ezarr
+ROOT_DIR=
 
 # USER IDs for each container that requires their own user. The default values will most likely suffice, but in case one of these IDs is already in use on your system it will have to be changed. Any value should work as long as there aren't conflicts with other users.
 # If you've already set up the containers and want to change user IDs after the fact, you have to remove the old users first and re-set permissions. First run remove_old_users.sh and then the steps for manual installation.
