--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 # If you're not sure what timezone you should fill in, you can look at the following list:
 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 # Use the column that says "TZ database name".
-# to find your system's preconfigured timezone run: cat /etc/timezone
+# To find your system's preconfigured timezone run: cat /etc/timezone
 TIMEZONE=Europe/Amsterdam
 
 # The PleX claim token is used to connect your server to your account. It can be obtained at
