Update Bazarr path mapping in docker-compose.yml.sample to match Sonarr/Radarr paths

--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -99,7 +99,7 @@ services:
       - TZ=${TIMEZONE}
     volumes:
       - ${ROOT_DIR}/config/bazarr-config:/config
-      - ${ROOT_DIR}/data/media:/media
+      - ${ROOT_DIR}/data/media:/data/media
     ports:
       - "6767:6767"
     restart: unless-stopped
