--- a/.env.sample
+++ b/.env.sample
@@ -18,6 +18,7 @@ MEDIACENTER_GID=13000
 SONARR_UID=13001
 RADARR_UID=13002
 LIDARR_UID=13003
+# Discontinued
 READARR_UID=13004
 MYLAR_UID=13005
 AUDIOBOOKSHELF_UID=13014
